--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Robbie Lens Photographie</title>
-    <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-</head>
-<body>
-    <nav>
-        <a href="index.html", target="_blank">
-            <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-        </a>
-        <ul>
-            <li><a href="a-propos.html">a-propos</a></li>
-        </ul>
-    </nav>
-    <header>
-        </a>
-        <h1>Photographie</h1>
-            <img src="./Asset/img/robbie-lens.png", alt="image de Robbie Lens" title="image de Robbie Lens">
-         <p>Où professionalisme s’allie avec passion.<br> Depuis plus de 5 ans maintenant, j’exerce mon métier avec la passion
-            qui m’anime : capturer l’essence de chaque instant.</p>
-            <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
-             Créativité, qualité, et sérénité pour vous !<br>
-              Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
-              <h2>Services</h2>
-              <ul>
-                  <li>Portrait seul ou à plusieurs</li>
-                  <li>Shooting mode</li>
-                  <li>Retouches sur mesure</li>
-                  <li>Développement</li>
-                </ul>
-    </header>
-            
-    <footer>
-        <a href="index.html", target="_blank">
-            <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-        </a>
-        <a href="https://x.com/", target="_blank">
-            <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
-        </a>
-        <a href="https://www.instagram.com/", target="_blank">
-            <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
-        </a>
-    </footer>
-</body>
+    <html lang="fr">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Accueil - Robbie Lens Photographie</title>
+            <link rel="icon" type="image/png" href="./Asset/img/logo.png">
+            <link href="index.css" rel="stylesheet">
+        </head>
+    <body>
+        <nav>
+                <a href="index.html">
+                    <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+                </a>
+                <ul class = "list_nav">
+                    <li><a class="lien_nav" href="a-propos.html">a-propos</li>
+        </nav>
+        <header>
+            </a>
+            <h1>Photographie</h1>
+                <img src="./Asset/img/robbie-lens.png", alt="image de Robbie Lens" title="image de Robbie Lens">
+             <p>Où <span class ="intro">professionalisme</span>s’allie avec <span class ="intro">passion.</span><br> Depuis plus de 5 ans maintenant, j’exerce mon métier avec la passion
+                qui m’anime : capturer l’essence de chaque instant.</p>
+                <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
+                 Créativité, qualité, et sérénité pour vous !<br>
+                  Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
+                  <h2>Services</h2>
+                  <ul>
+                      <li>Portrait seul ou à plusieurs</li>
+                      <li>Shooting mode</li>
+                      <li>Retouches sur mesure</li>
+                      <li>Développement</li>
+                    </ul>
+        </header>
+
+        <footer>
+            <a href="index.html">
+                <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+            </a>
+            <a href="https://x.com/", target="_blank">
+                <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
+            </a>
+            <a href="https://www.instagram.com/", target="_blank">
+                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
+            </a>
+        </footer>
+    </body>
 </html>
