--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos - Robbie Lens Photographie</title>
-    <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-</head>
-<body>
-    <nav>
-        <a href="index.html", target="_blank">
-            <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-        </a>
-        <ul>
-            <li><a href="index.html">index</a></li>
-        </ul>
-    </nav>
-    <header>
+    <html lang="fr">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>À propos - Robbie Lens Photographie</title>
+            <link rel="icon" type="image/png" href="./Asset/img/logo.png">
+            <link href="a-propos.css" rel="stylesheet">
+        </head>
+    <body>
+        <div>
+            <nav>
+                <a href="index.html">
+                    <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+                </a>
+                <ul class = "list_nav">
+                    <li><a class="lien_nav" href="index.html">index</a></li>
+                </ul>
+            </nav>
+        </div>
+        <header>
 
-          <h1>À propos de Robbie Lens</h1>  
-    </header>
-    <footer>
-         <a href="index.html", target="_blank">
-            <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-        </a>
-        <a href="https://x.com/", target="_blank">
-            <img src="./Asset/img/logo_X.png", alt="logo d'X" />
-        </a>
-        <a href="https://www.instagram.com/", target="_blank">
-            <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram">
-        </a>
-    </footer>
-</body>
+              <h1>À propos de Robbie Lens</h1>  
+        </header>
+        <footer>
+             <a href="index.html">
+                <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+            </a>
+            <a href="https://x.com/", target="_blank">
+                <img src="./Asset/img/logo_X.png", alt="logo d'X" />
+            </a>
+            <a href="https://www.instagram.com/", target="_blank">
+                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram">
+            </a>
+        </footer>
+    </body>
 </html>
