--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -3,34 +3,54 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>À propos - Robbie Lens Photographie</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+            <title>Accueil - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-            <link href="a-propos.css" rel="stylesheet">
+            <link href="style.css" rel="stylesheet">
         </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
-                    <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-                </a>
-                <ul class = "list_nav">
-                    <li><a class="lien_nav" href="index.html">index</a></li>
-                </ul>
-            </nav>
-        </div>
         <header>
-
-              <h1>À propos de Robbie Lens</h1>  
+            <nav>
+                    <a href="index.html">
+                        <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+                    </a>
+                    <ul>
+                        <li><a href="index.html">index</a></li>
+            </nav>
         </header>
+        <main>
+            <h1>À propos de Robbie Lens</h1>
+            <div class = "border_p_l">
+                <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
+                 Créativité, qualité, et sérénité pour vous !<br>
+                  Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
+                  <h2>Services</h2>
+                <ul class = "liste-service">
+                      <li>Portrait seul ou à plusieurs</li>
+                      <li>Shooting mode</li>
+                      <li>Retouches sur mesure</li>
+                      <li>Développement</li>
+                </ul>
+            </div>
+            <div class = "lien-degrade">
+                <a href="">VOIR MON PORTFOLIO</a>
+            </div>
+        </main>
+
         <footer>
-             <a href="index.html">
+            <a href="index.html">
                 <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
             </a>
             <a href="https://x.com/", target="_blank">
-                <img src="./Asset/img/logo_X.png", alt="logo d'X" />
+                <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
             </a>
             <a href="https://www.instagram.com/", target="_blank">
-                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram">
+                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
             </a>
         </footer>
     </body>
