--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -3,46 +3,48 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Accueil - Robbie Lens Photographie</title>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+            </style>
+            <title>À propos - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-            <link href="index.css" rel="stylesheet">
+            <link href="style.css" rel="stylesheet">
         </head>
     <body>
-        <nav>
-                <a href="index.html">
+        <div>
+            <nav>
+                <a href="a-propos.html">
                     <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
                 </a>
-                <ul class = "list_nav">
-                    <li><a class="lien_nav" href="a-propos.html">a-propos</li>
-        </nav>
+                <ul>
+                    <li> <a href="a-propos.html">a-propos</a></li>
+                </ul>
+            </nav>
+        </div>
         <header>
-            </a>
             <h1>Photographie</h1>
-                <img src="./Asset/img/robbie-lens.png", alt="image de Robbie Lens" title="image de Robbie Lens">
-             <p>Où <span class ="intro">professionalisme</span>s’allie avec <span class ="intro">passion.</span><br> Depuis plus de 5 ans maintenant, j’exerce mon métier avec la passion
-                qui m’anime : capturer l’essence de chaque instant.</p>
-                <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
-                 Créativité, qualité, et sérénité pour vous !<br>
-                  Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
-                  <h2>Services</h2>
-                  <ul>
-                      <li>Portrait seul ou à plusieurs</li>
-                      <li>Shooting mode</li>
-                      <li>Retouches sur mesure</li>
-                      <li>Développement</li>
-                    </ul>
         </header>
+        <main>
+            <p>
+                Où <em>professionalisme</em> s’allie avec <em>passion</em>. Depuis
+                plus de 5 ans maintenant, j’exerce mon métier avec la passion
+                qui m’anime : capturer l’essence de chaque instant.
+            </p>
+            <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
+            <div class="lien-degrade">
+                <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
+            </div>
 
+        </main>
         <footer>
-            <a href="index.html">
+             <a href="a-propos.html">
                 <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
             </a>
             <a href="https://x.com/", target="_blank">
-                <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
+                <img src="./Asset/img/logo_X.png", alt="logo d'X" />
             </a>
             <a href="https://www.instagram.com/", target="_blank">
-                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
+                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram">
             </a>
         </footer>
     </body>
-</html>
