--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -11,30 +11,36 @@
             <link href="style.css" rel="stylesheet">
         </head>
     <body>
-        <div>
-            <nav>
-                <a href="a-propos.html">
-                    <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-                </a>
-                <ul>
-                    <li> <a href="a-propos.html">a-propos</a></li>
-                </ul>
-            </nav>
-        </div>
         <header>
-            <h1>Photographie</h1>
+            <div class="navdiv">
+                <nav>
+                    <a href="a-propos.html">
+                        <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+                    </a>
+                    <ul>
+                        <li> <a href="a-propos.html">Accueil</a></li>
+                        <li> <a href="a-propos.html">A propos</a></li>
+                        <li> <a href="a-propos.html">Tarif</a></li>
+                        <li> <a href="a-propos.html">Portfolio</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
-            <p>
-                Où <em>professionalisme</em> s’allie avec <em>passion</em>. Depuis
-                plus de 5 ans maintenant, j’exerce mon métier avec la passion
-                qui m’anime : capturer l’essence de chaque instant.
-            </p>
-            <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
-            <div class="lien-degrade">
-                <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
+            <div class="p_photo">
+                <div class="titre_paragraphe">
+                <h1>Robbie Lens <br> Photographie</h1>
+                <p>
+                    Où <em>professionalisme</em> s’allie avec <em>passion</em>.<br>
+                    Depuis plus de 5 ans maintenant,<br> j’exerce mon métier avec la passion
+                    qui m’anime :<br> capturer l’essence de chaque instant.
+                </p>
+                <div class="lien-degrade">
+                    <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
+                </div>
+                </div>
+                <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
             </div>
-
         </main>
         <footer>
              <a href="a-propos.html">
