--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -19,26 +19,33 @@
                     <a href="index.html">
                         <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
                     </a>
+                <div class="lien_nav">
                     <ul>
-                        <li><a href="index.html">index</a></li>
+                        <li> <a href="a-propos.html">Accueil</a></li>
+                        <li> <a href="a-propos.html">A propos</a></li>
+                        <li> <a href="a-propos.html">Tarif</a></li>
+                        <li> <a href="a-propos.html">Portfolio</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main>
-            <h1>À propos de Robbie Lens</h1>
-            <div class = "border_p_l">
-                <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
-                 Créativité, qualité, et sérénité pour vous !<br>
-                  Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
-                  <h2>Services</h2>
-                <ul class = "liste-service">
-                      <li>Portrait seul ou à plusieurs</li>
-                      <li>Shooting mode</li>
-                      <li>Retouches sur mesure</li>
-                      <li>Développement</li>
-                </ul>
-            </div>
-            <div class = "lien-degrade">
-                <a href="">VOIR MON PORTFOLIO</a>
+            <div class="contenu_a_propos">
+                <h1>À propos de Robbie Lens</h1>
+                <div class = "border_p_l">
+                    <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
+                     Créativité, qualité, et sérénité pour vous !<br>
+                      Je gère tout, depuis la direction artistique, la réalisation du reportage, jusqu’à la livraison de vos photos retouchées, prêtes à l’emploi.</p>
+                      <h2>Services</h2>
+                    <ul class = "liste-service">
+                          <li>Portrait seul ou à plusieurs</li>
+                          <li>Shooting mode</li>
+                          <li>Retouches sur mesure</li>
+                          <li>Développement</li>
+                    </ul>
+                </div>
+                <div class = "lien-degrade">
+                    <a href="">VOIR MON PORTFOLIO</a>
             </div>
         </main>
 
