--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -5,7 +5,6 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -15,19 +14,15 @@
         </head>
     <body>
         <header>
-            <nav>
-                    <a href="index.html">
-                        <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-                    </a>
-                <div class="lien_nav">
-                    <ul>
-                        <li> <a href="a-propos.html">Accueil</a></li>
-                        <li> <a href="a-propos.html">A propos</a></li>
-                        <li> <a href="a-propos.html">Tarif</a></li>
-                        <li> <a href="a-propos.html">Portfolio</a></li>
-                    </ul>
-                </div>
-            </nav>
+			<nav>
+				<a href="index.html"><img src="./Asset/img/logo.png" alt="logo robbie-lens"></a>
+				<ul class="lien_nav">
+					<li><a href="index.html">Accueil</a></li>
+					<li><a href="a-propos.html">À propos</a></li>
+					<li><a href="tarifs.html">Tarifs</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+				</ul>
+			  </nav>			  
         </header>
         <main>
             <div class="contenu_a_propos">
@@ -46,7 +41,7 @@
                 </div>
                 <div class = "lien-degrade">
                     <a href="">VOIR MON PORTFOLIO</a>
-            </div>
+            	</div>
         </main>
 
         <footer>
