--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <style>
-                @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+                <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900&display=swap" rel="stylesheet">
             </style>
             <title>À propos - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
@@ -13,44 +13,42 @@
     <body>
         <header>
             <div class="navdiv">
-                <nav>
-                    <a href="a-propos.html">
-                        <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
-                    </a>
-                    <ul>
-                        <li> <a href="a-propos.html">Accueil</a></li>
-                        <li> <a href="a-propos.html">A propos</a></li>
-                        <li> <a href="a-propos.html">Tarif</a></li>
-                        <li> <a href="a-propos.html">Portfolio</a></li>
-                    </ul>
-                </nav>
+				<nav>
+					<a href="index.html"><img src="./Asset/img/logo.png" alt="logo robbie-lens"></a>
+					<ul class="lien_nav">
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="a-propos.html">À propos</a></li>,
+						<li><a href="tarifs.html">Tarifs</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
+					</ul>
+				  </nav>	
             </div>
         </header>
         <main>
             <div class="p_photo">
                 <div class="titre_paragraphe">
-                <h1>Robbie Lens <br> Photographie</h1>
-                <p>
-                    Où <em>professionalisme</em> s’allie avec <em>passion</em>.<br>
-                    Depuis plus de 5 ans maintenant,<br> j’exerce mon métier avec la passion
-                    qui m’anime :<br> capturer l’essence de chaque instant.
-                </p>
-                <div class="lien-degrade">
-                    <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
-                </div>
-                </div>
+                	<h1>Robbie Lens <br> Photographie</h1>
+                	<p>
+                	    Où <em>professionalisme</em> s’allie avec <em>passion</em>.<br>
+                	    Depuis plus de 5 ans maintenant,<br> j’exerce mon métier avec la passion
+                	    qui m’anime :<br> capturer l’essence de chaque instant.
+                	</p>
+                	<div class="lien-degrade">
+                	    <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
+                	</div>
+				</div>
                 <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
             </div>
         </main>
         <footer>
              <a href="a-propos.html">
-                <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
+                <img src="./Asset/img/logo.png" alt="logo robbie-lens" title="logo robbie-lens">
             </a>
-            <a href="https://x.com/", target="_blank">
-                <img src="./Asset/img/logo_X.png", alt="logo d'X" />
+            <a href="https://x.com/" target="_blank">
+                <img src="./Asset/img/logo_X.png" alt="logo d'X" />
             </a>
-            <a href="https://www.instagram.com/", target="_blank">
-                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram">
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="./Asset/img/logo_instagram.png" alt="logo d'instagram">
             </a>
         </footer>
     </body>
