--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -14,9 +14,9 @@
         </head>
     <body>
         <header>
-			<nav>
+			<nav class="navdiv">
 				<a href="index.html"><img src="./Asset/img/logo.png" alt="logo robbie-lens"></a>
-				<ul class="lien_nav">
+				<ul>
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="a-propos.html">À propos</a></li>
 					<li><a href="tarifs.html">Tarifs</a></li>
@@ -40,8 +40,8 @@
                     </ul>
                 </div>
                 <div class = "lien-degrade">
-                    <a href="">VOIR MON PORTFOLIO</a>
-            	</div>
+                    <a href="portfolio.html">VOIR MON PORTFOLIO</a>
+            </div>
         </main>
 
         <footer>
