--- a/robbie_lens/portfolio.html
+++ b/robbie_lens/portfolio.html
@@ -27,38 +27,34 @@
 				</ul>
 			</nav>
         </header>
-        <main>
-            <div class="p_photo">
-                <div class="titre_paragraphe">
-                	<h1>Robbie Lens <br> Photographie</h1>
-                	<p>
-                	    Où <em>professionalisme</em> s’allie avec <em>passion</em>.<br>
-                	    Depuis plus de 5 ans maintenant,<br> j’exerce mon métier avec la passion
-                	    qui m’anime :<br> capturer l’essence de chaque instant.
-                	</p>
-                	<div class="lien-degrade">
-                	    <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
-                	</div>
-				</div>
-                <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
+        <main class="conteneur-pf">
+            <div class="titre1">
+                <h1>Portfolio</h1>
             </div>
-            <div class="photo">
-                <h3>Mon dernier projet</h3>
-                <div class="photo2">
-                    <img src="./Asset/img/photopgraphie/element-1.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-2.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-3.png" alt="">
+            <div class="conteneur_paysage">
+                <h2>Paysage</h2>
+                <div class="paysage">
+                    <img src="./Asset/img/portfolio/paysage1.jpg" alt="">
+                    <img src="./Asset/img/portfolio/paysage2.jpg" alt="">
+                    <img src="./Asset/img/portfolio/paysage3.jpg" alt="">
                 </div>
-                <div class="photo2">    
-                    <img src="./Asset/img/photopgraphie/element-4.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-5.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-6.png" alt="">
+                <div class="paysage">
+                    <img src="./Asset/img/portfolio/paysage4.jpg" alt="">
+                    <img src="./Asset/img/portfolio/paysage5.jpg" alt="">
+                    <img src="./Asset/img/portfolio/paysage6.jpg" alt="">
                 </div>
-                <div class = "lien-degrade">
-                    <a class="lien-degrade-index" href="portfolio.html">VOIR MON PORTFOLIO</a>
+            </div>
+            <div class="conteneur_portrait">
+                <h2>Portrait</h2>
+                <div class="portrait">
+                    <img src="./Asset/img/portfolio/portrait1.jpg" alt="">
+                    <img src="./Asset/img/portfolio/portrait2.jpg" alt="">
+                    <img src="./Asset/img/portfolio/portrait3.jpg" alt="">
                 </div>
-                <div class="contact">
-                    
+                <div class="portrait2">
+                    <img src="./Asset/img/portfolio/portrait4.jpg" alt="">
+                    <img src="./Asset/img/portfolio/portrait5.jpg" alt="">
+                    <img src="./Asset/img/portfolio/portrait6.jpg" alt="">
                 </div>
             </div>
         </main>
