portfollio ok + css index ok

--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -48,12 +48,14 @@
             <a href="index.html">
                 <img src="./Asset/img/logo.png", alt="logo robbie-lens" title="logo robbie-lens">
             </a>
-            <a href="https://x.com/", target="_blank">
-                <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
-            </a>
-            <a href="https://www.instagram.com/", target="_blank">
-                <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
-            </a>
+            <div class="reseau">
+                <a href="https://x.com/", target="_blank">
+                    <img src="./Asset/img/logo_X.png", alt="logo d'X" title="logo de twitter">
+                </a>
+                <a href="https://www.instagram.com/", target="_blank">
+                    <img src="./Asset/img/logo_instagram.png", alt="logo d'instagram" title="logo d'instagram">
+                </a>
+            </div>
         </footer>
     </body>
 </html>
