--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -30,9 +30,9 @@
         <main>
             <div class="p_photo">
                 <div class="titre_paragraphe">
-                	<h1>Robbie Lens <br> Photographie</h1>
+                	<h1>Robbie Lens Photographie</h1>
                 	<p>
-                	    Où <em>professionalisme</em> s’allie avec <em>passion</em>.<br>
+                	    Où <em>professionalisme</em> s’allie avec <em>passion</em>. <br>
                 	    Depuis plus de 5 ans maintenant,<br> j’exerce mon métier avec la passion
                 	    qui m’anime :<br> capturer l’essence de chaque instant.
                 	</p>
@@ -44,12 +44,12 @@
             </div>
             <div class="photo">
                 <h3>Mon dernier projet</h3>
-                <div class="photo2">
+                <div class="photo2 first_elem">
                     <img src="./Asset/img/photopgraphie/element-1.png" alt="">
                     <img src="./Asset/img/photopgraphie/element-2.png" alt="">
                     <img src="./Asset/img/photopgraphie/element-3.png" alt="">
                 </div>
-                <div class="photo2">    
+                <div class="photo2 second__elem">    
                     <img src="./Asset/img/photopgraphie/element-4.png" alt="">
                     <img src="./Asset/img/photopgraphie/element-5.png" alt="">
                     <img src="./Asset/img/photopgraphie/element-6.png" alt="">
@@ -66,11 +66,13 @@
              <a href="a-propos.html">
                 <img src="./Asset/img/logo.png" alt="logo robbie-lens" title="logo robbie-lens">
             </a>
-            <a href="https://x.com/" target="_blank">
-                <img src="./Asset/img/logo_X.png" alt="logo d'X" />
-            </a>
-            <a href="https://www.instagram.com/" target="_blank">
-                <img src="./Asset/img/logo_instagram.png" alt="logo d'instagram">
-            </a>
+            <div class="reseau">
+                <a href="https://x.com/" target="_blank">
+                    <img src="./Asset/img/logo_X.png" alt="logo d'X" />
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="./Asset/img/logo_instagram.png" alt="logo d'instagram">
+                </a>
+            </div>
         </footer>
     </body>
