--- a/robbie_lens/portfolio.html
+++ b/robbie_lens/portfolio.html
@@ -27,46 +27,40 @@
 				</ul>
 			</nav>
         </header>
-        <main class="conteneur-pf">
-            <div class="titre1">
+        <main>
+            <div class="h1">
                 <h1>Portfolio</h1>
             </div>
-            <div class="conteneur_paysage">
-                <h2>Paysage</h2>
-                <div class="paysage">
-                    <img src="./Asset/img/portfolio/paysage1.jpg" alt="">
-                    <img src="./Asset/img/portfolio/paysage2.jpg" alt="">
-                    <img src="./Asset/img/portfolio/paysage3.jpg" alt="">
-                </div>
-                <div class="paysage">
-                    <img src="./Asset/img/portfolio/paysage4.jpg" alt="">
-                    <img src="./Asset/img/portfolio/paysage5.jpg" alt="">
-                    <img src="./Asset/img/portfolio/paysage6.jpg" alt="">
-                </div>
-            </div>
-            <div class="conteneur_portrait">
-                <h2>Portrait</h2>
-                <div class="portrait">
-                    <img src="./Asset/img/portfolio/portrait1.jpg" alt="">
-                    <img src="./Asset/img/portfolio/portrait2.jpg" alt="">
-                    <img src="./Asset/img/portfolio/portrait3.jpg" alt="">
-                </div>
-                <div class="portrait2">
-                    <img src="./Asset/img/portfolio/portrait4.jpg" alt="">
-                    <img src="./Asset/img/portfolio/portrait5.jpg" alt="">
-                    <img src="./Asset/img/portfolio/portrait6.jpg" alt="">
-                </div>
+            <div class="conteneur-paysage">
+                    <h2 class="h2">Paysage</h2>
+                        <img src="./Asset/img/portfolio/paysage1.jpg" alt="">
+                        <img src="./Asset/img/portfolio/paysage2.jpg" alt="">
+                        <img src="./Asset/img/portfolio/paysage3.jpg" alt="">    
+                        <img src="./Asset/img/portfolio/paysage4.jpg" alt="">
+                        <img src="./Asset/img/portfolio/paysage5.jpg" alt="">
+                        <img src="./Asset/img/portfolio/paysage6.jpg" alt="">
+                    <h2 class="h2">Portrait</h2>
+                        <img src="./Asset/img/portfolio/portrait1.jpg" alt="">
+                        <img src="./Asset/img/portfolio/portrait2.jpg" alt="">
+                        <img src="./Asset/img/portfolio/portrait3.jpg" alt="">   
+                        <img src="./Asset/img/portfolio/portrait4.jpg" alt="">
+                        <img src="./Asset/img/portfolio/portrait5.jpg" alt="">
+                        <img src="./Asset/img/portfolio/portrait6.jpg" alt="">
             </div>
         </main>
         <footer>
              <a href="a-propos.html">
                 <img src="./Asset/img/logo.png" alt="logo robbie-lens" title="logo robbie-lens">
             </a>
-            <a href="https://x.com/" target="_blank">
-                <img src="./Asset/img/logo_X.png" alt="logo d'X" />
-            </a>
-            <a href="https://www.instagram.com/" target="_blank">
-                <img src="./Asset/img/logo_instagram.png" alt="logo d'instagram">
-            </a>
+            <div class="reseau">
+                <a href="https://x.com/" target="_blank">
+                    <img src="./Asset/img/logo_X.png" alt="logo d'X" />
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="./Asset/img/logo_instagram.png" alt="logo d'instagram">
+                </a>
+            </div>
         </footer>
     </body>
+
+    
