--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -9,7 +9,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
             <style>
-                <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900&display=swap" rel="stylesheet">
+                <link href ="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900&display=swap" rel="stylesheet">
             </style>
             <title>À propos - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
@@ -40,7 +40,9 @@
                 	    <a href="">UN PROJET ? ÉCRIVEZ-MOI</a>
                 	</div>
 				</div>
-                <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
+                <div class="image-wrapper">
+                    <img src="Asset/img/robbie-lens.png" alt="Portrait avec effet de la photographe Robbie Lens" >
+                </div>
             </div>
             <div class="photo">
                 <h3>Mon dernier projet</h3>
