css page portfolio

--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -47,14 +47,14 @@
             <div class="photo">
                 <h3>Mon dernier projet</h3>
                 <div class="photo2 first_elem">
-                    <img src="./Asset/img/photopgraphie/element-1.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-2.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-3.png" alt="">
+                        <img src="./Asset/img/photopgraphie/element-1.png" alt="Twelve apostles - Australie">
+                        <img src="./Asset/img/photopgraphie/element-2.png" alt="Wai-O-Tapu - Nouvelle-Zélande">
+                        <img src="./Asset/img/photopgraphie/element-3.png" alt="Parc National d’Abel Tasman - Nouvelle-Zélande">
                 </div>
                 <div class="photo2 second__elem">    
-                    <img src="./Asset/img/photopgraphie/element-4.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-5.png" alt="">
-                    <img src="./Asset/img/photopgraphie/element-6.png" alt="">
+                        <img src="./Asset/img/photopgraphie/element-4.png" alt="Lac Rotorua - Nouvelle-Zélande">
+                        <img src="./Asset/img/photopgraphie/element-5.png" alt="Milford Sound - Nouvelle-Zélande">
+                        <img src="./Asset/img/photopgraphie/element-6.png" alt="Lac Wanaka - Nouvelle-Zélande">
                 </div>
                 <div class = "lien-degrade">
                     <a class="lien-degrade-index" href="portfolio.html">VOIR MON PORTFOLIO</a>
