--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -8,9 +8,10 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-            <title>Accueil - Robbie Lens Photographie</title>
+            <title>À propos - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-            <link href="style.css" rel="stylesheet">
+            <link href="style/style.css" rel="stylesheet">
+            <link href="style/a-propos.css" rel="stylesheet">
         </head>
     <body>
         <header>
@@ -25,8 +26,8 @@
 			  </nav>			  
         </header>
         <main>
-            <div class="contenu_a_propos">
-                <h1>À propos de Robbie Lens</h1>
+            <div class="contenu_a_propos"> 
+                    <h1>À propos</h1>
                 <div class = "border_p_l">
                     <p>Photographe depuis plus de 5 ans, je réalise des reportages aux photos dynamiques et pertinentes pour vos projets de communication.<br>
                      Créativité, qualité, et sérénité pour vous !<br>
