--- a/robbie_lens/portfolio.html
+++ b/robbie_lens/portfolio.html
@@ -11,9 +11,10 @@
             <style>
                 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900&display=swap" rel="stylesheet">
             </style>
-            <title>À propos - Robbie Lens Photographie</title>
+            <title>Portfolio - Robbie Lens Photographie</title>
             <link rel="icon" type="image/png" href="./Asset/img/logo.png">
-            <link href="style.css" rel="stylesheet">
+            <link href="style/style.css" rel="stylesheet">
+            <link href="style/portfolio.css" rel="stylesheet">
         </head>
     <body>
         <header>
