--- a/robbie_lens/a-propos.html
+++ b/robbie_lens/a-propos.html
@@ -39,10 +39,36 @@
                           <li>Retouches sur mesure</li>
                           <li>Développement</li>
                     </ul>
-                </div>
+                	</div>
+				</div>
                 <div class = "lien-degrade">
                     <a href="portfolio.html">VOIR MON PORTFOLIO</a>
             </div>
+			<section class="section-tarifs">
+				<h2>Tarifs</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Désignation</th>
+							<th>Quantité</th>
+							<th>Prix</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Retouches photo
+								studio professionnel</td>
+							<td>x 800 photos</td>
+							<td>3 200€/800 photos</td>
+						</tr>
+						<tr>
+							<td>Assistant photo
+								lumière professionnel</td>
+							<td>x 2 sets studio</td>
+							<td>1 500€/journée</td>
+						</tr>
+					</tbody>
+				</table>
         </main>
 
         <footer>
