--- a/robbie_lens/index.html
+++ b/robbie_lens/index.html
@@ -61,7 +61,7 @@
                     <a class="lien-degrade-index" href="portfolio.html">VOIR MON PORTFOLIO</a>
                 </div>
             </div>
-            <h3>Parlons de votrer projets</h3>
+            <h3>Parlons de votrer projet</h3>
                     <form id="encre1" method= "get">
                         <label for="prenom">prénom</label>
                         <label for="email">email</label>
