--- a/robbie_lens/tarifs.html
+++ b/robbie_lens/tarifs.html
@@ -28,30 +28,71 @@
 				</ul>
 			</nav>
         </header>
-        <main>
-            <table>
-                <caption>Studio pro</caption>
-                <thead>
-                    <tr>
-                        <td>Designation</td>
-                        <td>Quantite</td>
-                        <td>Prix</td>
-                    </tr>
-                </thead>
-                    <tbody>
-                        <tr>
-                            <td>Retouche photo <br>studio professionnel</td>
-                            <td>x 800 photo</td>
-                            <td>3 200€/800 photos</td>
-                        </tr>
-                        <tr>
-                            <td>Assistant photo <br>lumiere professionnel</td>
-                            <td>x2 sets studio</td>
-                            <td>1 500€/journee</td>
-                        </tr>
-                    </tbody>
-                </table>
-        </main>
+<main>
+    
+    <!-- Les 3 boîtes côte à côte -->
+    <section class="tarification-blocs">
+        <h2>Tarifs</h2>
+        <div class="tarif-shooting">
+            <h3>Shooting photo</h3>
+            <p>
+                Pour capturer vos moments les plus précieux et garder un souvenir impérissable.<br>
+                Je me déplace en Île-de-France pour réaliser vos photos.
+            </p>
+            <h4>350€/demi-journée</h4>
+            <p class="petit-text">Matériel, déplacement inclus</p>
+        </div>
+
+        <div class="tarif-retouche">
+            <h3>Retouches</h3>
+            <p>
+                Vous souhaitez retoucher vos photos pour un résultat professionnel ?<br>
+                Bénéficiez d'un rendu optimal pour vos publications.
+            </p>
+            <h4>550€/demi-journée</h4>
+            <p class="petit-text">2 allers/retours par photo</p>
+        </div>
+
+        <div class="tarif-album">
+            <h3>Album photo</h3>
+            <p>
+                Partagez avec vos proches et vos clients<br>
+                les photos des moments partagés ensemble à travers un album personnalisé.
+            </p>
+            <h4>400€ album A4</h4>
+            <p class="petit-text">30 pages recto/verso</p>
+        </div>
+    </section>
+
+    <!-- Tableau en dessous -->
+    <section class="tarification-table">
+        <table>
+            <caption>Studio pro</caption>
+            <thead>
+                <tr>
+                    <td>Désignation</td>
+                    <td>Quantité</td>
+                    <td>Prix</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Retouche photo <br>studio professionnel</td>
+                    <td>x 800 photos</td>
+                    <td>3 200€/800 photos</td>
+                </tr>
+                <tr>
+                    <td>Assistant photo <br>lumière professionnel</td>
+                    <td>x2 sets studio</td>
+                    <td>1 500€/journée</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+</main>
+
+
+
         <footer>
              <a href="a-propos.html">
                 <img src="./Asset/img/logo.png" alt="logo robbie-lens" title="logo robbie-lens">
